---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2021-01-27
  Changes:
    - Updated to Factorio 1.1.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2020-10-19
  Bugfixes:
    - Fixed a crash when confirming a textfield in another mod's GUI.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2020-09-23
  Major Features:
    - Initial release.