@@ -14,6 +14,7 @@ ruin-maker-name=Ruin filename:
 ruin-maker-tile-filter=Select tiles to be included:
 ruin-maker-damage=Include entity damage, if any
 ruin-maker-items=Include inserted items, if any
+ruin-maker-fluids=Include inserted fluids, if any
 ruin-maker-confirm=Confirm, output ruin to file
 ruin-maker-cancel=Cancel ruin selection
 
