@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: ????
-  Changes:
+  Minor Features:
+    - Added support for fluid spawning.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2021-01-27
